--- a/certif/cert.css
+++ b/certif/cert.css
@@ -39,3 +39,21 @@ img.image4 {
     float: right;
     margin-right: 10%;
 }
+img.image5 {
+    float: left;
+    margin-left: 10%;
+}
+
+img.image6 {
+    float: right;
+    margin-right: 10%;
+}
+img.image7 {
+    float: left;
+    margin-left: 10%;
+}
+
+img.image8 {
+    float: right;
+    margin-right: 10%;
+}
